@@ -1,4 +1,6 @@
 0.02
+ [PYX::Parser]
+ - Fix SYNOPSIS section in doc.
 
 0.01 2014-11-18T07:30:12+01:00
  - First version.
